2004-10-28  Jerry Quinn  <jlquinn@optonline.net>
	* java/awt/image/ColorModel.java (cloneColorModel): Fix line
	wrap.  Use Boolean.valueOf.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/java-gui-branch@89754 138bc75d-0d04-0410-961f-82ee72b054a4